log
Thu, Mar 27, 2025  7:29:58 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:20: error: statement with no effect [-Werror=unused-value]
     newlista->data == NULL;
                    ^
list.c:34:20: error: statement with no effect [-Werror=unused-value]
     newlista->next == NULL;
                    ^
list.c:35:20: error: statement with no effect [-Werror=unused-value]
     newlista->prev == NULL;
                    ^
list.c:36:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return newlista;
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Thu, Mar 27, 2025  7:31:07 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return newlista;
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a48663e
Thu, Mar 27, 2025  7:32:01 PM: 
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:37:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return newlista;
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
20c1136
Thu, Mar 27, 2025  7:33:03 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
0bdc457
Thu, Mar 27, 2025  7:35:38 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a20fd49
Thu, Mar 27, 2025  7:38:24 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a3821b0
Thu, Mar 27, 2025  7:41:33 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7fe281b
Thu, Mar 27, 2025  7:42:17 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
c7fea97
Thu, Mar 27, 2025  7:43:55 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fc367b8
Thu, Mar 27, 2025  7:44:50 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
dd03447
Thu, Mar 27, 2025  7:47:38 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
dd7a94e
Thu, Mar 27, 2025  7:49:41 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b4597f1
Thu, Mar 27, 2025  7:52:04 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
ed627a6
Thu, Mar 27, 2025  7:52:33 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
57cd647
Thu, Mar 27, 2025  7:57:06 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
4faa54b
Thu, Mar 27, 2025  7:59:03 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
acb3fa0
Thu, Mar 27, 2025  8:00:03 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d18ebdc
Thu, Mar 27, 2025  8:01:29 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
f1bb842
